[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelartconv"
version = "1.0.3"
authors = [
  { name="Simon Ruzicka", email="sima.ruzicka@gmail.com" },
]
description = "PixelArtConv - Pixel Art Converter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ruzicka02/paconv"